refactor : chỉnh sửa giao diện

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
 
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="assets/scss/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
@@ -127,10 +127,8 @@
             </div>
 
         </div>
-
-
-
     </div>
+
 
 
     <!-- About us -->
@@ -192,129 +190,7 @@
         </div>
     </div>
 
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer__map">
-            <div class="footer__map--icon">
-                <i class="fas fa-map-marker-alt"></i>
-            </div>
-            <div class="footer__map--text">
-                <span>open map</span>
-            </div>
-        </div>
-        <div class="footer__content">
-            <div class="footer__content__contact">
-                <h1>MoGo</h1>
-                <div class="">
-                    <p class="footer--gray contact__text">Lorem ipsum dolor sit amet , consectetur adipiscing elit, sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                    </p>
-                    <p class="contact__countFollow"><span>15k</span>followers</p>
-                    <div class="contact__follow">
-                        <span class="footer__light-italic footer--gray">Follow Us: </span>
-                        <div>
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-pinterest-p"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-google-plus-g"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-dribbble"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-tumblr"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="contact__sub">
-                        <input type="text" placeholder="Your Email...">
-                        <button>SUBSCRIBE</button>
-                    </div>
-                </div>
-            </div>
-            <div class="footer__content__blog">
-                <p class="title">BLOGS</p>
-                <ul>
-                    <li>
-                        <img class="blog__img" src="assets/img/blog-1.png" alt="">
-                        <div class="blog__text">
-                            <a>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING
-                            </a>
-                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/img/blog-2.png" alt="">
-                        <div class="blog__text">
-                            <a>CONSECTETUR ADIPISCING ELIT. SED DO EIUSMOD TEMPOR
-                            </a>
-                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/img/blog-3.png" alt="">
-                        <div class="blog__text">
-                            <a>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE
-                            </a>
-                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer__content__ins">
-                <p class="title">INSTAGRAM</p>
-                <div class="ins__img">
-                    <img src="assets/img/footer-ins-1.png" alt="">
-                    <img src="assets/img/footer-ins-2.png" alt="">
-                    <img src="assets/img/footer-ins-3.png" alt="">
-                    <img class="ins__img-margin" src="assets/img/footer-ins-4.png" alt="">
-                    <img class="ins__img-margin" src="assets/img/footer-ins-5.png" alt="">
-                    <img class="ins__img-margin" src="assets/img/footer-ins-6.png" alt="">
-                    <img src="assets/img/footer-ins-7.png" alt="">
-                    <img src="assets/img/footer-ins-8.png" alt="">
-                    <img src="assets/img/footer-ins-9.png" alt="">
-                </div>
-                <a class="footer__light-italic">View more photos</a>
-            </div>
-        </div>
-        <p class="copyright">
-            <i class="far fa-copyright"></i> 2016 MoGo free PSD template by <a>Laaiq</a>
-        </p>
-    </footer>
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <div class="modal-body">
-                    <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2">
-                        <div class="form-search">
-                            <i class="fas fa-search" aria-hidden="true"></i>
-                            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-
+    <!-- service -->
     <div class="service">
         <div class="title-section">
             <span>We work with</span>
@@ -370,8 +246,7 @@
 
 
 
-
-
+    <!-- design -->
     <div class="design">
         <div class="design__content">
             <div class="title-section">
@@ -381,12 +256,16 @@
             <div class="design__img">
                 <img src="assets/img/enqui-large.png" alt="">
                 <img class="img-position" src="assets/img/enqui-small.png" alt="">
-
+            </div>
+        </div>
+    </div>
+    <!-- what-we-do -->
     <div class="what-we-do">
         <div class="title-section">
             <span>Service</span>
             <h2>WHAT WE DO</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
         </div>
         <div class="what-we-do__content">
             <div class="what-we-do__content__img">
@@ -401,8 +280,8 @@
                         </div>
                         <div class="icon">
                             <button onclick="myFunction1()">
-                              <i class="fas fa-chevron-up" id="icon-tranform-01"></i>
-                          </button>
+                            <i class="fas fa-chevron-up" id="icon-tranform-01"></i>
+                        </button>
                         </div>
                     </div>
                     <div class="text__content" id="text-01">
@@ -419,8 +298,8 @@
                         </div>
                         <div class="icon">
                             <button onclick="myFunction2()">
-                            <i class="fas fa-chevron-up" id="icon-tranform-02"></i>
-                        </button>
+                          <i class="fas fa-chevron-up" id="icon-tranform-02"></i>
+                      </button>
                         </div>
                     </div>
                     <div class="text__content" id="text-02">
@@ -437,8 +316,8 @@
                         </div>
                         <div class="icon">
                             <button onclick="myFunction3()">
-                          <i class="fas fa-chevron-up" id="icon-tranform-03"></i>
-                      </button>
+                        <i class="fas fa-chevron-up" id="icon-tranform-03"></i>
+                    </button>
                         </div>
                     </div>
                     <div class="text__content" id="text-03">
@@ -488,16 +367,140 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer__map">
+                <div class="footer__map--icon">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="footer__map--text">
+                    <span>open map</span>
+                </div>
+            </div>
+            <div class="footer__content">
+                <div class="footer__content__contact">
+                    <h1>MoGo</h1>
+                    <div class="">
+                        <p class="footer--gray contact__text">Lorem ipsum dolor sit amet , consectetur adipiscing elit, sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        </p>
+                        <p class="contact__countFollow"><span>15k</span>followers</p>
+                        <div class="contact__follow">
+                            <span class="footer__light-italic footer--gray">Follow Us: </span>
+                            <div>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-pinterest-p"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-dribbble"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-tumblr"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="contact__sub">
+                            <input type="text" placeholder="Your Email...">
+                            <button>SUBSCRIBE</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__content__blog">
+                    <p class="title">BLOGS</p>
+                    <ul>
+                        <li>
+                            <img class="blog__img" src="assets/img/blog-1.png" alt="">
+                            <div class="blog__text">
+                                <a>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING
+                            </a>
+                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="assets/img/blog-2.png" alt="">
+                            <div class="blog__text">
+                                <a>CONSECTETUR ADIPISCING ELIT. SED DO EIUSMOD TEMPOR
+                            </a>
+                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="assets/img/blog-3.png" alt="">
+                            <div class="blog__text">
+                                <a>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE
+                            </a>
+                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__content__ins">
+                    <p class="title">INSTAGRAM</p>
+                    <div class="ins__img">
+                        <img src="assets/img/footer-ins-1.png" alt="">
+                        <img src="assets/img/footer-ins-2.png" alt="">
+                        <img src="assets/img/footer-ins-3.png" alt="">
+                        <img class="ins__img-margin" src="assets/img/footer-ins-4.png" alt="">
+                        <img class="ins__img-margin" src="assets/img/footer-ins-5.png" alt="">
+                        <img class="ins__img-margin" src="assets/img/footer-ins-6.png" alt="">
+                        <img src="assets/img/footer-ins-7.png" alt="">
+                        <img src="assets/img/footer-ins-8.png" alt="">
+                        <img src="assets/img/footer-ins-9.png" alt="">
+                    </div>
+                    <a class="footer__light-italic">View more photos</a>
+                </div>
+            </div>
+            <p class="copyright">
+                <i class="far fa-copyright"></i> 2016 MoGo free PSD template by <a>Laaiq</a>
+            </p>
+        </footer>
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <div class="modal-body">
+                        <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2">
+                            <div class="form-search">
+                                <i class="fas fa-search" aria-hidden="true"></i>
+                                <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
 
 
 
 
-    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/slick.js"></script>
-    <script src="assets/js/main.js"></script>
+
+
+
+
+        <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+        <script src="assets/js/vendor/bootstrap.min.js"></script>
+        <script src="assets/js/vendor/slick.js"></script>
+        <script src="assets/js/main.js"></script>
 
 
 </body>
