--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-<<<<<<< HEAD
-=======
 
-
->>>>>>> e301af86dadc937c8137acaf9a9233c9f9f73de0
     <link rel="stylesheet" href="assets/css/vendor/slick.css">
     <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="assets/scss/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
@@ -194,10 +190,6 @@
         </div>
     </div>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> e301af86dadc937c8137acaf9a9233c9f9f73de0
 
     <div class="team">
         <div class="title-section">
@@ -302,9 +294,6 @@
         </div>
     </div>
 
-
-<<<<<<< HEAD
-=======
 
     <div class="container">
         <div class="row">
@@ -437,133 +426,12 @@
     </div>
 
 
- 
 
 
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer__map">
-            <div class="footer__map--icon">
-                <i class="fas fa-map-marker-alt"></i>
-            </div>
-            <div class="footer__map--text">
-                <span>open map</span>
-            </div>
-        </div>
-        <div class="footer__content">
-            <div class="footer__content__contact">
-                <h1>MoGo</h1>
-                <div class="">
-                    <p class="footer--gray contact__text">Lorem ipsum dolor sit amet , consectetur adipiscing elit, sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                    </p>
-                    <p class="contact__countFollow"><span>15k</span>followers</p>
-                    <div class="contact__follow">
-                        <span class="footer__light-italic footer--gray">Follow Us: </span>
-                        <div>
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-pinterest-p"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-google-plus-g"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-dribbble"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-tumblr"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="contact__sub">
-                        <input type="text" placeholder="Your Email...">
-                        <button>SUBSCRIBE</button>
-                    </div>
-                </div>
-            </div>
-            <div class="footer__content__blog">
-                <p class="title">BLOGS</p>
-                <ul>
-                    <li>
-                        <img class="blog__img" src="assets/img/blog-1.png" alt="">
-                        <div class="blog__text">
-                            <a>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING
-                            </a>
-                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/img/blog-2.png" alt="">
-                        <div class="blog__text">
-                            <a>CONSECTETUR ADIPISCING ELIT. SED DO EIUSMOD TEMPOR
-                            </a>
-                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/img/blog-3.png" alt="">
-                        <div class="blog__text">
-                            <a>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE
-                            </a>
-                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer__content__ins">
-                <p class="title">INSTAGRAM</p>
-                <div class="ins__img">
-                    <img src="assets/img/footer-ins-1.png" alt="">
-                    <img src="assets/img/footer-ins-2.png" alt="">
-                    <img src="assets/img/footer-ins-3.png" alt="">
-                    <img class="ins__img-margin" src="assets/img/footer-ins-4.png" alt="">
-                    <img class="ins__img-margin" src="assets/img/footer-ins-5.png" alt="">
-                    <img class="ins__img-margin" src="assets/img/footer-ins-6.png" alt="">
-                    <img src="assets/img/footer-ins-7.png" alt="">
-                    <img src="assets/img/footer-ins-8.png" alt="">
-                    <img src="assets/img/footer-ins-9.png" alt="">
-                </div>
-                <a class="footer__light-italic">View more photos</a>
-            </div>
-        </div>
-        <p class="copyright">
-            <i class="far fa-copyright"></i> 2016 MoGo free PSD template by <a>Laaiq</a>
-        </p>
-    </footer>
 
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
 
-                <div class="modal-body">
-                    <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2">
-                        <div class="form-search">
-                            <i class="fas fa-search" aria-hidden="true"></i>
-                            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-
->>>>>>> e301af86dadc937c8137acaf9a9233c9f9f73de0
     <div class="service">
         <div class="title-section">
             <span>We work with</span>
