Fix : content work

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <div class="col-md-3">
                     <div class="work__content">
                         <div class="work__img img-01">
-                            <img src="/assets/img/work1.png" alt="">
+                            <img src="/assets/img/work6.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -502,7 +502,7 @@
                     </div>
                     <div class="work__content">
                         <div class="work__img img-02">
-                            <img src="/assets/img/work2.png" alt="">
+                            <img src="/assets/img/work7.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -514,7 +514,7 @@
                 <div class="col-md-3">
                     <div class="work__content">
                         <div class="work__img img-03">
-                            <img src="/assets/img/work3.png" alt="">
+                            <img src="/assets/img/work1.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -524,7 +524,7 @@
                     </div>
                     <div class="work__content">
                         <div class="work__img img-04">
-                            <img src="/assets/img/work4.png" alt="">
+                            <img src="/assets/img/work1.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -544,6 +544,26 @@
                             <span>Lorem ipsum dolor sit</span>
                         </div>
                     </div>
+                    <!-- <div class="work__content">
+                        <div class="work__img img-06">
+                            <img src="/assets/img/work6.png" alt="">
+                        </div>
+                        <div class="work__text">
+                            <i class="far fa-image"></i>
+                            <p>CREATIVELY DESIGNED</p>
+                            <span>Lorem ipsum dolor sit</span>
+                        </div>
+                    </div>
+                    <div class="work__content">
+                        <div class="work__img img-07">
+                            <img src="/assets/img/work6.png" alt="">
+                        </div>
+                        <div class="work__text">
+                            <i class="far fa-image"></i>
+                            <p>CREATIVELY DESIGNED</p>
+                            <span>Lorem ipsum dolor sit</span>
+                        </div>
+                    </div> -->
                 </div>
                 <div class="col-md-3">
                     <div class="work__content">
