fix : fix cac res cua cac content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                 </li>
-                <li class="header__menu-item item--display">
+                <li class="header__menu-item">
                     <button type="button" href="#" class="header__menu-link" data-toggle="modal" data-target="#exampleModal">
                     <i class="fas fa-search"></i>
                 </button>
@@ -99,33 +99,31 @@
     </header>
     <div class="wrapper">
         <div class="banner">
-            <div class="banner-gradiant">
 
-                <div class="banner__content">
-                    <div class="banner__content__top">
-                        <p>Creative Template</p>
-                        <h2 class="top--border-bottom"> WELCOME TO MOGO</h2>
-                        <button href="#">learn more</button>
-                    </div>
-                    <div class="banner__content__bottom">
-                        <ul>
-                            <li>
-                                <a href="#"><span>01</span>INTRO</a>
-                            </li>
-                            <li>
-                                <a href="#"><span>02</span>WORK</a>
+            <div class="banner__content">
+                <div class="banner__content__top">
+                    <p>Creative Template</p>
+                    <h2 class="top--border-bottom"> WELCOME TO MOGO</h2>
+                    <button href="#">learn more</button>
+                </div>
+                <div class="banner__content__bottom">
+                    <ul>
+                        <li>
+                            <a href="#"><span>01</span>INTRO</a>
+                        </li>
+                        <li>
+                            <a href="#"><span>02</span>WORK</a>
 
-                            </li>
-                            <li>
-                                <a href="#"><span>03</span>ABOUT</a>
+                        </li>
+                        <li>
+                            <a href="#"><span>03</span>ABOUT</a>
 
-                            </li>
-                            <li>
-                                <a href="#"><span>04</span>CONTACTS</a>
-                            </li>
-                        </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>04</span>CONTACTS</a>
+                        </li>
+                    </ul>
 
-                    </div>
                 </div>
             </div>
 
@@ -271,7 +269,7 @@
         </div>
         <div class="what-we-do__content">
             <div class="what-we-do__content__img">
-                <img src="/assets/img/service.png" alt="#">
+                <img src="assets/img/service.png" alt="#">
             </div>
             <div class="what-we-do__content__text">
                 <div class="text">
@@ -458,22 +456,22 @@
     <div class="icon-design">
         <div class="icon-design__content">
             <div class="icon-design__img">
-                <img src="/assets/img/on-work-1.png" alt="">
+                <img src="assets/img/on-work-1.png" alt="">
             </div>
             <div class="icon-design__img">
-                <img src="/assets/img/on-work-5.png" alt="">
+                <img src="assets/img/on-work-5.png" alt="">
             </div>
             <div class="icon-design__img">
-                <img src="/assets/img/on-work-3.png" alt="">
+                <img src="assets/img/on-work-3.png" alt="">
             </div>
             <div class="icon-design__img">
-                <img src="/assets/img/on-work-4.png" alt="">
+                <img src="assets/img/on-work-4.png" alt="">
             </div>
             <div class="icon-design__img">
-                <img src="/assets/img/on-work-5.png" alt="">
+                <img src="assets/img/on-work-5.png" alt="">
             </div>
             <div class="icon-design__img">
-                <img src="/assets/img/on-work-6.png" alt="">
+                <img src="assets/img/on-work-6.png" alt="">
             </div>
 
         </div>
@@ -492,7 +490,7 @@
                 <div class="col-md-3">
                     <div class="work__content">
                         <div class="work__img img-01">
-                            <img src="/assets/img/work6.png" alt="">
+                            <img src="assets/img/work6.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -502,7 +500,7 @@
                     </div>
                     <div class="work__content">
                         <div class="work__img img-02">
-                            <img src="/assets/img/work7.png" alt="">
+                            <img src="assets/img/work7.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -514,7 +512,7 @@
                 <div class="col-md-3">
                     <div class="work__content">
                         <div class="work__img img-03">
-                            <img src="/assets/img/work1.png" alt="">
+                            <img src="assets/img/work1.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -524,7 +522,7 @@
                     </div>
                     <div class="work__content">
                         <div class="work__img img-04">
-                            <img src="/assets/img/work1.png" alt="">
+                            <img src="assets/img/work1.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -536,7 +534,7 @@
                 <div class="col-md-3">
                     <div class="work__content">
                         <div class="work__img img-05">
-                            <img src="/assets/img/work5.png" alt="">
+                            <img src="assets/img/work5.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -568,7 +566,7 @@
                 <div class="col-md-3">
                     <div class="work__content">
                         <div class="work__img img-06">
-                            <img src="/assets/img/work6.png" alt="">
+                            <img src="assets/img/work6.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
@@ -578,7 +576,7 @@
                     </div>
                     <div class="work__content">
                         <div class="work__img img-07">
-                            <img src="/assets/img/work7.png" alt="">
+                            <img src="assets/img/work7.png" alt="">
                         </div>
                         <div class="work__text">
                             <i class="far fa-image"></i>
