fix : optimize code các section

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             </nav>
             <ul class="header__menu-icon">
                 <li>
-                    <a href="#" class="header__menu-link">
+                    <a href="#">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                 </li>
                 <li>
-                    <button type="button" href="#" class="header__menu-link" data-toggle="modal" data-target="#exampleModal">
+                    <button type="button" href="#" data-toggle="modal" data-target="#exampleModal">
                     <i class="fas fa-search"></i>
                 </button>
 
@@ -100,11 +100,10 @@
     <main>
         <div class="wrapper">
             <div class="banner">
-
                 <div class="banner__content">
                     <div class="banner__content__top">
                         <p>Creative Template</p>
-                        <h2 class="top--border-bottom"> WELCOME TO MOGO</h2>
+                        <h2> WELCOME TO MOGO</h2>
                         <button href="#">learn more</button>
                     </div>
                     <div class="banner__content__bottom">
@@ -218,7 +217,6 @@
                         <p>CREATIVITY</p>
                         <span>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                     </div>
-
                 </div>
                 <div class="service__content__item">
                     <i class="fas fa-book"></i>
@@ -255,8 +253,8 @@
                     <h2>UNIQUE DESIGN</h2>
                 </div>
                 <div class="design__img">
-                    <img src="assets/img/enqui-large.png" alt="" class="design__img-bottom">
-                    <img class="img-position" src="assets/img/enqui-small.png" alt="">
+                    <img src="assets/img/enqui-large.png" alt="">
+                    <img src="assets/img/enqui-small.png" alt="">
                 </div>
             </div>
         </div>
@@ -478,7 +476,7 @@
             </div>
         </div>
 
-
+        <!-- work -->
         <div class="container-fluid">
             <div class="title-section">
                 <span>What we do</span>
@@ -681,10 +679,8 @@
                         <span>LOREM IPSUM DOLOR SIT AMET</span>
                         <p>Consectetur adipiscing elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua</p>
                         <div class="item__text__icon">
-
                             <a href="#"><i class="fas fa-eye"></i> 512</a>
                             <a href="#"><i class="fas fa-comment-dots"></i> 17</a>
-
                         </div>
                     </div>
                 </div>
