--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Language" content="en-us" />
-    <title></title>
-    <meta name="description" content="">
+
+    <meta name="description" content="Thời trang là một nhu cầu không thể thiếu hãy đến với chúng tôi">
+    <meta name="title" content="Fashion man">
+    <!-- facebook -->
+    <meta property="og:url" content="https://facebook.com">
+    <meta property="og:type" content="fashtion">
+    <meta property="og:title" content="fashtion bre bre">
+    <meta property="og:description" content="This is the website fashion. Nice eh?">
+    <meta property="og:image" content="assets/img/fashion.png">
+    <title>Mogo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
@@ -26,7 +34,17 @@
     <link rel="stylesheet" href="assets/css/vendor/slick.css">
     <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/vendor/aos.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "url": "https://leafyfy.000webhostapp.com",
+          "logo": "assets/img/fashion.png"
+      }
+  </script>
 
 </head>
 
@@ -132,7 +150,7 @@
 
 
         <!-- About us -->
-        <div class="about-us">
+        <div data-aos="fade-up" class="about-us">
             <div class="title-section">
                 <span>What we do</span>
                 <h2>STORY ABOUT US</h2>
@@ -187,11 +205,13 @@
                     <p>24</p>
                     <span>MEMBERS</span>
                 </div>
+                <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                <div class="elfsight-app-e0b4608f-a5d9-4a8a-b6ec-62a2042312e0"></div> -->
             </div>
         </div>
 
         <!-- service -->
-        <div class="service">
+        <div data-aos="fade-right" class="service">
             <div class="title-section">
                 <span>We work with</span>
                 <h2>AMAZING SERVICES</h2>
@@ -246,7 +266,7 @@
 
 
         <!-- design -->
-        <div class="design">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" class="design">
             <div class="design__content">
                 <div class="title-section">
                     <span>For all devices</span>
@@ -259,7 +279,7 @@
             </div>
         </div>
         <!-- what-we-do -->
-        <div class="what-we-do">
+        <div data-aos="fade-right" class="what-we-do">
             <div class="title-section">
                 <span>Service</span>
                 <h2>WHAT WE DO</h2>
@@ -372,7 +392,7 @@
 
 
         <!-- team -->
-        <div class="team">
+        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="team">
             <div class="title-section">
                 <span>What are team</span>
                 <h2>MEET OUR TEAM</h2>
@@ -477,7 +497,7 @@
         </div>
 
         <!-- work -->
-        <div class="container-fluid">
+        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="container-fluid">
             <div class="title-section">
                 <span>What we do</span>
                 <h2>SOME OF OUR WORK</h2>
@@ -606,12 +626,12 @@
             </div>
         </div>
         <!-- say -->
-        <div class="say">
+        <div  class="say">
             <div class="title-section">
                 <span>Happy Clients</span>
                 <h2>WHAT PEOPLE SAY</h2>
             </div>
-            <div class="say__content">
+            <div data-aos="fade-right" data-aos-anchor-placement="right-center" class="say__content">
                 <div class="say__content__list">
                     <div class="say__content__item">
                         <div class="item__img">
@@ -661,7 +681,7 @@
         </div>
 
         <!-- blog -->
-        <div class="blog">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" class="blog">
             <div class="title-section">
                 <span>Our stories</span>
                 <h2>LATEST BLOG</h2>
@@ -734,7 +754,7 @@
         </div>
         <div class="footer__content">
             <div class="footer__content__contact">
-                <h1>MoGo</h1>
+                <h2>MoGo</h2>
                 <div class="">
                     <p class="footer--gray contact__text">Lorem ipsum dolor sit amet , consectetur adipiscing elit, sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
                     </p>
@@ -845,12 +865,7 @@
     <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
     <script src="assets/js/vendor/bootstrap.min.js"></script>
     <script src="assets/js/vendor/slick.js"></script>
+    <script src="assets/js/vendor/aos.js"></script>
     <script src="assets/js/main.js"></script>
-
-
 </body>
-
-
-
-
 </html>
