--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="assets/css/vendor/aos.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    
+
     <script type="application/ld+json">
-      {
-          "@context": "https://schema.org",
-          "@type": "Organization",
-          "url": "https://leafyfy.000webhostapp.com",
-          "logo": "assets/img/fashion.png"
-      }
-  </script>
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "url": "https://leafyfy.000webhostapp.com",
+            "logo": "assets/img/fashion.png"
+        }
+    </script>
 
 </head>
 
@@ -124,25 +124,23 @@
                         <h2> WELCOME TO MOGO</h2>
                         <button href="#">learn more</button>
                     </div>
-                    <div class="banner__content__bottom">
-                        <ul>
-                            <li>
-                                <a href="#"><span>01</span>INTRO</a>
-                            </li>
-                            <li>
-                                <a href="#"><span>02</span>WORK</a>
+                    <ul>
+                        <li>
+                            <a href="#"><span>01</span>INTRO</a>
+                        </li>
+                        <li>
+                            <a href="#"><span>02</span>WORK</a>
 
-                            </li>
-                            <li>
-                                <a href="#"><span>03</span>ABOUT</a>
+                        </li>
+                        <li>
+                            <a href="#"><span>03</span>ABOUT</a>
 
-                            </li>
-                            <li>
-                                <a href="#"><span>04</span>CONTACTS</a>
-                            </li>
-                        </ul>
+                        </li>
+                        <li>
+                            <a href="#"><span>04</span>CONTACTS</a>
+                        </li>
+                    </ul>
 
-                    </div>
                 </div>
 
             </div>
@@ -160,14 +158,15 @@
             <div class="about-us__img">
                 <div class="about-us-01">
                     <div class="about-us__content">
-                        <i class="fas fa-user-friends"></i>
+                        <img src="assets/img/about-us-friend.png" alt="">
                         <p>SUPER TEAM</p>
                     </div>
                 </div>
                 <div class="about-us-02">
                     <div class="about-us__content">
 
-                        <i class="fas fa-user-friends"></i>
+                        <img src="assets/img/about-us-friend.png" alt="">
+
                         <p>SUPER TEAM</p>
                     </div>
 
@@ -175,7 +174,8 @@
                 <div class="about-us-03">
                     <div class="about-us__content">
 
-                        <i class="fas fa-user-friends"></i>
+                        <img src="assets/img/about-us-friend.png" alt="">
+
                         <p>SUPER TEAM</p>
                     </div>
 
@@ -218,42 +218,47 @@
             </div>
             <div class="service__content">
                 <div class="service__content__item">
-                    <i class="fas fa-camera-retro"></i>
+                    <img src="assets/img/service-icon-01.png" alt="">
                     <div class="service__content__text">
                         <p>PHOTOGRAPHY</p>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                     </div>
                 </div>
                 <div class="service__content__item">
-                    <i class="fas fa-chart-line"></i>
+                    <img src="assets/img/service-icon-02.png" alt="">
+
                     <div class="service__content__text">
                         <p>WEB DESIGN</p>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                     </div>
                 </div>
                 <div class="service__content__item">
-                    <i class="fas fa-desktop"></i>
+                    <img src="assets/img/service-icon-03.png" alt="">
+
                     <div class="service__content__text">
                         <p>CREATIVITY</p>
                         <span>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                     </div>
                 </div>
                 <div class="service__content__item">
-                    <i class="fas fa-book"></i>
+                    <img src="assets/img/service-icon-04.png" alt="">
+
                     <div class="service__content__text">
                         <p>SEO</p>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                     </div>
                 </div>
                 <div class="service__content__item">
-                    <i class="fas fa-home"></i>
+                    <img src="assets/img/service-icon-05.png" alt="">
+
                     <div class="service__content__text">
                         <p>CSS/HTML</p>
                         <span>Consectetur adipiscing elit, sed do eiusmod tempor.</span>
                     </div>
                 </div>
                 <div class="service__content__item">
-                    <i class="fas fa-expand"></i>
+                    <img src="assets/img/service-icon-06.png" alt="">
+
                     <div class="service__content__text">
                         <p>DIGITAL</p>
                         <span>Lorem ipsum dolor sit amet, consectetur, sed do eiusmod tempor.</span>
@@ -294,7 +299,7 @@
                     <div class="text">
                         <div class="text__title" id="text__title-01">
                             <div class="text__title-img">
-                                <i class="fas fa-image"></i>
+                                <img src="assets/img/wwd-icon-01.png" alt="">
                                 <p> PHOTOGRAPHY</p>
                             </div>
                             <div class="icon">
@@ -305,14 +310,14 @@
                         </div>
                         <div class="text__content" id="text-01">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat
-                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
                     <div class="text">
                         <div class="text__title" id="text__title-02">
                             <div class="text__title-img">
-                                <i class="fas fa-sliders-h icon-tranforms"></i>
+                                <img src="assets/img/wwd-icon-02.png" alt="">
+
                                 <p> CREATIVITY</p>
                             </div>
                             <div class="icon">
@@ -323,14 +328,14 @@
                         </div>
                         <div class="text__content" id="text-02">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat
-                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
                     <div class="text">
                         <div class="text__title" id="text__title-03">
                             <div class="text__title-img">
-                                <i class="fas fa-bullseye"></i>
+                                <img src="assets/img/wwd-icon-03.png" alt="">
+
                                 <p> WEB DESIGN</p>
                             </div>
                             <div class="icon">
@@ -341,8 +346,7 @@
                         </div>
                         <div class="text__content" id="text-03">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat
-                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
 
@@ -354,9 +358,7 @@
         <div class="feed-back">
             <div class="use-slick slider">
                 <div class="feed-back__content">
-                    <div class="content-icon">
-                        <i class="far fa-comment-alt"></i>
-                    </div>
+                    <img src="assets/img/feed-back-01.png" alt="">
                     <div class="content-text">
                         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             "
@@ -365,9 +367,8 @@
                     </div>
                 </div>
                 <div class="feed-back__content">
-                    <div class="content-icon">
-                        <i class="far fa-comment-alt"></i>
-                    </div>
+                    <img src="assets/img/feed-back-01.png" alt="">
+
                     <div class="content-text">
                         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             "
@@ -376,9 +377,8 @@
                     </div>
                 </div>
                 <div class="feed-back__content">
-                    <div class="content-icon">
-                        <i class="far fa-comment-alt"></i>
-                    </div>
+                    <img src="assets/img/feed-back-01.png" alt="">
+
                     <div class="content-text">
                         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             "
@@ -394,7 +394,7 @@
         <!-- team -->
         <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="team">
             <div class="title-section">
-                <span>What are team</span>
+                <span>Who are team</span>
                 <h2>MEET OUR TEAM</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
@@ -511,7 +511,7 @@
                             <div class="work__img img-01">
                                 <img src="assets/img/work6.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -521,7 +521,8 @@
                             <div class="work__img img-02">
                                 <img src="assets/img/work7.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
+
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -534,7 +535,8 @@
                             <div class="work__img img-03">
                                 <img src="assets/img/work1.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
+
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -544,7 +546,8 @@
                             <div class="work__img img-04">
                                 <img src="assets/img/work1.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
+
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -556,7 +559,8 @@
                             <div class="work__img img-05">
                                 <img src="assets/img/work5.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
+
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -569,7 +573,8 @@
                             <div class="work__img img-06">
                                 <img src="assets/img/work6.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
+
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -579,7 +584,8 @@
                             <div class="work__img img-07">
                                 <img src="assets/img/work7.png" alt="">
                                 <div class="work__text">
-                                    <i class="far fa-image"></i>
+                                    <img src="assets/img/work-icon.png" alt="">
+
                                     <p>CREATIVELY DESIGNED</p>
                                     <span>Lorem ipsum dolor sit</span>
                                 </div>
@@ -626,7 +632,7 @@
             </div>
         </div>
         <!-- say -->
-        <div  class="say">
+        <div class="say">
             <div class="title-section">
                 <span>Happy Clients</span>
                 <h2>WHAT PEOPLE SAY</h2>
@@ -699,7 +705,7 @@
                         <span>LOREM IPSUM DOLOR SIT AMET</span>
                         <p>Consectetur adipiscing elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua</p>
                         <div class="item__text__icon">
-                            <a href="#"><i class="fas fa-eye"></i> 512</a>
+                            <a href="#"><img src="assets/img/blog-icon-eye.png" alt=""> 512</a>
                             <a href="#"><i class="fas fa-comment-dots"></i> 17</a>
                         </div>
                     </div>
@@ -716,7 +722,7 @@
                         <span>SED DO EIUSMOD TEMPOR</span>
                         <p>Adipiscing elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua.</p>
                         <div class="item__text__icon">
-                            <a href="#"><i class="fas fa-eye"></i> 922</a>
+                            <a href="#"><img src="assets/img/blog-icon-eye.png" alt=""> 922</a>
                             <a href="#"><i class="fas fa-comment-dots"></i> 42</a>
                         </div>
                     </div>
@@ -733,7 +739,7 @@
                         <span>INCIDIDUNT UT LABORE ET DOLORE</span>
                         <p>Elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua</p>
                         <div class="item__text__icon">
-                            <a href="#"><i class="fas fa-eye"></i> 1560</a>
+                            <a href="#"><img src="assets/img/blog-icon-eye.png" alt=""> 1560</a>
                             <a href="#"><i class="fas fa-comment-dots"></i> 10</a>
                         </div>
                     </div>
@@ -868,4 +874,5 @@
     <script src="assets/js/vendor/aos.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
