Fix : fix margin for contents

--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
                         </div>
                         <div class="text__content" id="text-01">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
+                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
                     <div class="text">
@@ -328,7 +329,8 @@
                         </div>
                         <div class="text__content" id="text-02">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
+                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
                     <div class="text">
@@ -346,7 +348,8 @@
                         </div>
                         <div class="text__content" id="text-03">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
+                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
 
@@ -356,34 +359,33 @@
         </div>
         <!-- feed-back -->
         <div class="feed-back">
-            <div class="use-slick slider">
-                <div class="feed-back__content">
-                    <img src="assets/img/feed-back-01.png" alt="">
-                    <div class="content-text">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            "
-                        </p>
-                        <span>Jon Doe</span>
+            <div class="feed-back-width">
+                <div class="use-slick slider">
+                    <div class="feed-back__content">
+                        <img src="assets/img/feed-back-01.png" alt="">
+                        <div class="content-text">
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. "
+                            </p>
+                            <span>Jon Doe</span>
+                        </div>
                     </div>
-                </div>
-                <div class="feed-back__content">
-                    <img src="assets/img/feed-back-01.png" alt="">
+                    <div class="feed-back__content">
+                        <img src="assets/img/feed-back-01.png" alt="">
 
-                    <div class="content-text">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            "
-                        </p>
-                        <span>Jon Doe</span>
+                        <div class="content-text">
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. "
+                            </p>
+                            <span>Jon Doe</span>
+                        </div>
                     </div>
-                </div>
-                <div class="feed-back__content">
-                    <img src="assets/img/feed-back-01.png" alt="">
+                    <div class="feed-back__content">
+                        <img src="assets/img/feed-back-01.png" alt="">
 
-                    <div class="content-text">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            "
-                        </p>
-                        <span>Jon Doe</span>
+                        <div class="content-text">
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. "
+                            </p>
+                            <span>Jon Doe</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -394,7 +396,7 @@
         <!-- team -->
         <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="team">
             <div class="title-section">
-                <span>Who are team</span>
+                <span>Who we are</span>
                 <h2>MEET OUR TEAM</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
@@ -497,7 +499,7 @@
         </div>
 
         <!-- work -->
-        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" class="container-fluid">
+        <div class="container-fluid">
             <div class="title-section">
                 <span>What we do</span>
                 <h2>SOME OF OUR WORK</h2>
