--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="banner__content">
                     <div class="banner__content__top">
                       <title>
-                        Design web MOGO
+                        Creative Template web MOGO
                       </title>
                         <p>Creative Template</p>
                         <h2> WELCOME TO MOGO</h2>
